--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -89,6 +89,12 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
 }
 
+
+
+.visible {
+  visibility: visible;
+}
+
 /*--------------------------------------------------------------
 # Override some default Bootstrap stylings
 --------------------------------------------------------------*/
