--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -813,6 +813,12 @@ h1, h2, h3, h4, h5, h6 {
   padding: 3px 6px;
 }
 
+.float-right{
+  float: right;
+  margin-right: 7rem;
+  margin-top: 1rem;
+}
+
 .tableActions{
   padding: 2rem;
 }
